[package]
name = "rocket_anyhow"
version = "0.1.0"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"
description = "throw any error inside rocket's route"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
anyhow = "1.0.40"

[dev-dependencies]
