[package]
name = "rocket_anyhow"
version = "0.1.1"
license = "MIT"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"
description = "throw any error inside rocket's route"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {git="https://github.com/SergioBenitez/Rocket"}
anyhow = "1.0.40"

[dev-dependencies]
